@@ -8,6 +8,7 @@ WHAT IS NEW?
 
   * New Plotscripting Stuff
     * "reset hero picture" and "reset hero palette" [James]
+    * "same slice" slice identity test [James]
 
   * Vikings of Midgard
 
